--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="row">
                 <div class="col-lg-4">
                     <div class="img-header">
-                        <img src="../verst 1/img/logo.PNG" alt="logo animated bounce">
+                        <img src="./verst 1/img/logo.PNG" alt="logo animated bounce">
                     </div>
                 </div>
                 <div class="col-lg-8">
@@ -75,7 +75,7 @@
                         </form>
                     </div>
                     <div class="col-lg-8">
-                        <img class="imgheaderlogo" src="../verst 1/img/логоj 2.png">
+                        <img class="imgheaderlogo" src="./verst 1/img/логоj 2.png">
                             
                         </div>
                 </div>
