--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="row">
                 <div class="col-lg-4">
                     <div class="img-header">
-                        <img src="./verst 1/img/logo.PNG" alt="logo animated bounce">
+                        <img src="./img/logo.PNG" alt="logo animated bounce">
                     </div>
                 </div>
                 <div class="col-lg-8">
@@ -75,7 +75,7 @@
                         </form>
                     </div>
                     <div class="col-lg-8">
-                        <img class="imgheaderlogo" src="./verst 1/img/логоj 2.png">
+                        <img class="imgheaderlogo" src="./img/логоj 2.png">
                             
                         </div>
                 </div>
@@ -92,9 +92,9 @@
             </div>
             <div class="col-lg-3">
                 <div class="card mx-auto" style="max-width: 340px;">
-                    <img class="card-img" src="../verst 1/img/icon1.PNG" alt="...">
+                    <img class="card-img" src="./img/icon1.PNG" alt="...">
                     <div class="card-img-overlay text-white">
-                        <img class="card-img2" src="../verst 1/img/icon1-1.PNG" alt="...">
+                        <img class="card-img2" src="./img/icon1-1.PNG" alt="...">
                         <h6 class="card-title">Koc Koi Tomi</h6>
                         <p class="card-texxt">Lorem ipsum is dummy<br>lorem very dumy</p>
                         <button type="button" class="btn btn-light btn-lg">
@@ -104,9 +104,9 @@
             </div>
             <div class="col-lg-3">
                 <div class="card mx-auto" style="max-width: 340px;">
-                    <img class="card-img" src="../verst 1/img/icon2.PNG" alt="...">
+                    <img class="card-img" src="./img/icon2.PNG" alt="...">
                     <div class="card-img-overlay text-white">
-                        <img class="card-img2" src="../verst 1/img/icon2-2.PNG" alt="...">
+                        <img class="card-img2" src="./img/icon2-2.PNG" alt="...">
                         <h6 class="card-title">Koc Koi Tomi</h6>
                         <p class="card-texxt">Lorem ipsum is dummy<br>lorem very dumy</p>
                         <button type="button" class="btn btn-light btn-lg">
@@ -116,9 +116,9 @@
             </div>
             <div class="col-lg-3">
                 <div class="card mx-auto" style="max-width: 340px;">
-                    <img class="card-img" src="../verst 1/img/icon3.PNG" alt="...">
+                    <img class="card-img" src="./img/icon3.PNG" alt="...">
                     <div class="card-img-overlay text-white">
-                        <img class="card-img2" src="../verst 1/img/icon3-3.PNG" alt="...">
+                        <img class="card-img2" src="./img/icon3-3.PNG" alt="...">
                         <h6 class="card-title">Koc Koi Tomi</h6>
                         <p class="card-texxt">Lorem ipsum is dummy<br>lorem very dumy</p>
                         <button type="button" class="btn btn-light btn-lg">
@@ -128,9 +128,9 @@
             </div>
             <div class="col-lg-3">
                 <div class="card mx-auto" style="max-width: 340px;">
-                    <img class="card-img" src="../verst 1/img/icon4.PNG" alt="...">
+                    <img class="card-img" src="./img/icon4.PNG" alt="...">
                     <div class="card-img-overlay text-white">
-                        <img class="card-img2" src="../verst 1/img/icon4-4.PNG" alt="...">
+                        <img class="card-img2" src="./img/icon4-4.PNG" alt="...">
                         <h6 class="card-title">Koc Koi Tomi</h6>
                         <p class="card-texxt">Lorem ipsum is dummy<br>lorem very dumy</p>
                         <button type="button" class="btn btn-light btn-lg">
@@ -150,47 +150,47 @@
                 </div>
                 <div class="col-lg-4">
                     <div class="img-featured">
-                        <img src="../verst 1/img/velo.PNG" alt=""> 
+                        <img src="./img/velo.PNG" alt=""> 
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="img-featured">
-                        <img src="../verst 1/img/2.PNG" alt=""> 
+                        <img src="./img/2.PNG" alt=""> 
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="img-featured">
-                        <img src="../verst 1/img/3.PNG" alt=""> 
+                        <img src="./img/3.PNG" alt=""> 
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="img-featured">
-                        <img src="../verst 1/img/4.PNG" alt=""> 
+                        <img src="./img/4.PNG" alt=""> 
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="img-featured">
-                        <img src="../verst 1/img/5.PNG" alt=""> 
+                        <img src="./img/5.PNG" alt=""> 
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="img-featured">
-                        <img src="../verst 1/img/6.PNG" alt=""> 
+                        <img src="./img/6.PNG" alt=""> 
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="img-featured">
-                        <img src="../verst 1/img/7.PNG" alt=""> 
+                        <img src="./img/7.PNG" alt=""> 
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="img-featured">
-                        <img src="../verst 1/img/8.PNG" alt=""> 
+                        <img src="./img/8.PNG" alt=""> 
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="img-featured">
-                        <img src="../verst 1/img/9.PNG" alt=""> 
+                        <img src="./img/9.PNG" alt=""> 
                     </div>
                 </div>
             </div>
@@ -204,7 +204,7 @@
             </div>
             <div class="row">
             <div class="col-lg-2">
-                <img src="../verst 1/img/sxema.PNG">
+                <img src="./img/sxema.PNG">
             </div>
             <div class="col-lg-6">
                 <h4>Modern App Design</h4>
@@ -225,7 +225,7 @@
                     <i class="fa fa-plus fa" aria-hidden="true"></i>Know More</button>
             </div>
                 <div class="col-lg-4">
-                <img class="imgcloock" src="../verst 1/img/часы.jpeg">
+                <img class="imgcloock" src="./img/часы.jpeg">
             </div>
             
         </div>
@@ -241,13 +241,13 @@
                 <div class="blockTeam">
                     <div class="row">
                 <div class="col-lg-4">
-                    <img src="../verst 1/img/team1.PNG">
+                    <img src="./img/team1.PNG">
                 </div>
                 <div class="col-lg-4">
-                    <img src="../verst 1/img/team2.PNG">
+                    <img src="./img/team2.PNG">
                 </div>
                 <div class="col-lg-4">
-                    <img src="../verst 1/img/team3.PNG">
+                    <img src="./img/team3.PNG">
                 </div>
                     </div>
                 </div>
@@ -360,22 +360,22 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-2">
-                    <img src="../verst 1/img/footer1.PNG">
+                    <img src="./img/footer1.PNG">
                 </div>
                 <div class="col-lg-2">
-                    <img src="../verst 1/img/footer2.PNG">
+                    <img src="./img/footer2.PNG">
                 </div>
                 <div class="col-lg-2">
-                    <img src="../verst 1/img/footer3.PNG">
+                    <img src="./img/footer3.PNG">
                 </div>
                 <div class="col-lg-2">
-                    <img src="../verst 1/img/footer4.PNG">
+                    <img src="./img/footer4.PNG">
                 </div>
                 <div class="col-lg-2">
-                    <img src="../verst 1/img/footer5.PNG">
+                    <img src="./img/footer5.PNG">
                 </div>
                 <div class="col-lg-2">
-                    <img src="../verst 1/img/footer6.PNG">
+                    <img src="./img/footer6.PNG">
                 </div>
             </div>
         </div>
